# python-project-lvl3

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  hexlet-check.yml
abc/: aleksey94dan-github-io.html
page_loader/: __init__.py  cli.py  errors.py  loader.py  log_config.yaml  logging.py  logging_app.py  my_logging.py  parsing.py  scrape.py  url.py
page_loader/abc/: en-hexlet-io-my.html
page_loader/abc/en-hexlet-io-my_files/: en-hexlet-io-lessons.rss  en-hexlet-io-u-new.html
page_loader/script/: __init__.py  page_loader.py
tests/: conftest.py  test_loader.py  test_page_loader.py  test_parsing.py  test_scrape.py  test_urls.py
tests/fixture/: actual_base_urls  actual_local_urls  index.html
tests/fixture/expected/: expected.html
tests/fixture/site/: index.html
tests/fixture/site/expected/: expected_for_changed.html
tests/fixture/stylesheets/: style.css
