[tool.poetry]
name = "Aleksey94Dan-page-load"
version = "0.1.0"
description = "A utility for downloading the specified address from the network. The utility downloads all the resources specified on the page and changes the page so that it starts referring to local versions."
authors = ["Aleksey Danilchenko <danilchenko.aleksey94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
